refactor(network): improve URL handling and logging for geolocation services
- Use URI constructor instead of URL for safer URL creation in ip-api.com and ipinfo.io requests
- Broaden exception catching from IOException to Exception to handle URI-related exceptions
- Add and refine comments for player opt-out logic and region handling
- Adjust debug logging for opted-out players and region messages

This refactor enhances robustness of network requests and improves code clarity, preventing potential URL parsing issues.